--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "konva": "^9.3.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-konva": "^18.2.10",
-    "react-quill": "^2.0.0"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
